@@ -1,3 +1,6 @@
+21 April 2020: George
+	- Change default value for 'rrset-roundrobin' to yes.
+
 20 April 2020: Wouter
 	- Fix #222: --enable-rpath, fails to rpath python lib.
 	- Fix for count of reply states in the mesh.
